<resources>
    <string name="app_name">Wine And Dine</string>
    <string name="nav_search">Search</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password...</string>
    <string name="email">Email...</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username...</string>
    <string name="firstname">Firstname...</string>
    <string name="lastname">Lastname...</string>
    <string name="finish">Finish</string>
    <string name="phone_number">Phone number...</string>
    <string name="change_password">Change Password</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="phone_number_">Phone number</string>
    <string name="profile_username">Username:&#032;</string>
    <string name="profile_firstname">First name:&#032;</string>
    <string name="profile_lastname">Last name:&#032;</string>
    <string name="profile_phonenumber">Phone number:&#032;</string>
    <string name="profile_email">Email:&#032;</string>
    <string name="reviews">Reviews</string>
    <string name="or">Or</string>
    <string name="change_avatar_button">Change avatar button</string>
    <string name="wine_n_dine">Wine N Dine</string>
    <string name="wine_dine"><![CDATA[Wine & Dine]]></string>
    <string name="company_logo">company logo</string>
    <string name="review">Review</string>
    <string name="application_logo">Application Logo</string>
    <string name="info">Info</string>
    <string name="om_wine_dine"><![CDATA[Om Wine & Dine]]></string>
    <string name="p_wine_dine_kan_du_hitta_dem_b_sta_matst_llena_i_staden_du_befinner_dig_i"><![CDATA[På Wine & Dine kan du hitta dem bästa matställena i staden du befinner dig i.]]></string>
    <string name="_0761650786">0761650786</string>
    <string name="p_wine_dine_kan_du_hitta_dem_b_sta_matst_llen_i_staden_du_befinner_dig_i_n_r_du_hittat_en_resturang_s_kan_du_sedan_l_gga_till_den_i_favoriter_och_ge_platsen_betyg_och_en_recension_eller_varf_r_inte_sj_lv_l_gga_till_en_restaurang_som_du_kan_dela_med_dina_v_nner_och_andra"><![CDATA[På Wine & Dine kan du hitta dem bästa matställen i staden du befinner dig i. När du hittat en resturang så kan du sedan lägga till den i Favoriteroch ge platsen betyg och en recension eller varför inte själv lägga till en restaurang som du kan dela med dina vänner och andra]]></string>
    <string name="vid_fr_gor_kontakta_oss_g_rna_via_mail_eller_telefon">Vid frågor kontakta oss gärna via mail eller telefon:</string>
    <string name="wine_dine_gmail_com">wine_dine@gmail.com</string>
    <string name="winendinev_gen_20_trollh_ttan_46160">Winendinevägen 20 Trollhättan 46160</string>
    <string name="kontakta_oss">Kontakta oss:</string>
    <string name="p_wine_dine_kan_du_hitta_dem_b_sta_matst_llen_i_staden_du_befinner_dig_i_n_r_du_hittat_en_resturang_s_kan_du_sedan_l_gga_till_den_i_favoriter_och_ge_platsen_betyg_och_en_recension_eller_varf_r_inte_sj_lv_l_gga_till_en_restaurang_som_du_kan_dela_med_dina_v_nner"><![CDATA[På Wine & Dine kan du hitta dem bästa matställen i staden du befinner dig i. När du hittat en resturang så kan du sedan lägga till den i Favoriteroch ge platsen betyg och en recension eller varför inte själv lägga till en restaurang som du kan dela med dina vänner.]]></string>
    <string name="p_wine_dine_kan_du_hitta_dem_b_sta_matst_llen_i_staden_du_befinner_dig_i_n_r_du_hittat_en_resturang_s_kan_du_sedan_l_gga_till_den_i_favoriter_och_ge_platsen_betyg_och_en_recension_du_kan_ocks_varf_r_inte_sj_lv_l_gga_till_en_restaurang_som_du_kan_dela_med_dina_v_nner"><![CDATA[På Wine & Dine kan du hitta dem bästa matställen i staden du befinner dig i. När du hittat en resturang så kan du sedan lägga till den i Favoriteroch ge platsen betyg och en recension. Du kan ocksåvarför inte själv lägga till en restaurang som du kan dela med dina vänner.]]></string>
    <string name="bes_k_g_rna_v_r_hemsida_f_r_mer_information">Besök gärna vår hemsida för mer information:</string>
    <string name="www_google_com">www.google.com</string>
    <string name="p_wine_dine_kan_du_hitta_dem_b_sta_matst_llen_i_staden_du_befinner_dig_i_n_r_du_hittat_en_restaurang_s_kan_du_sedan_l_gga_till_den_i_din_favoritlista_och_ge_platsen_betyg_och_en_recension_eller_varf_r_inte_sj_lv_l_gga_till_en_restaurang_som_du_kan_dela_med_dina_v_nner"><![CDATA[På Wine & Dine kan du hitta dem bästa matställen i staden du befinner dig i. När du hittat en restaurang så kan du sedan lägga till den i din favoritlista och ge platsen betyg och en recension eller varför inte själv lägga till en restaurang som du kan dela med dina vänner.]]></string>
    <string name="med_wine_dine_hittar_du_dem_b_sta_matst_llen_i_staden_du_befinner_dig_i_dem_restaurangen_du_diggar_mest_kan_du_l_gga_till_i_din_favoritlista_och_ge_platsen_betyg_du_kan_sj_lv_l_gga_till_en_restaurang_som_du_kan_dela_med_dina_v_nner"><![CDATA[Med Wine & Dine hittar du dem bästa matställen i staden du befinner dig i. Dem restaurangen du diggar mest kan du lägga till i din favoritlista och ge platsen betyg. Du kan själv lägga till en restaurang som du kan dela med dina vänner.]]></string>
    <string name="wine_n_dine_toolbar">Wine\'n Dine</string>
    <string name="om_wine_n_dine">Om Wine\'n Dine</string>
    <string name="sign_out">Sign out</string>
</resources>
