<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:padding="20dp">

    <EditText
        android:id="@+id/user_name_pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/first_name_pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name_pt"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/last_name_pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name_pt"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <Button
        android:id="@+id/finish_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_number_et"
        android:layout_alignEnd="@+id/last_name_pt"
        android:layout_marginTop="24dp"
        android:text="@string/finish" />

    <EditText
        android:id="@+id/phone_number_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name_pt"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="number|phone"
        android:autofillHints="" />
</RelativeLayout>