<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <FrameLayout
        android:id="@+id/main_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/main_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_toolbar">

    </FrameLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/app_toolbar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/main_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <ImageView
            android:id="@+id/app_logo_iv"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/company_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/wd_logo"
            tools:layout_conversion_absoluteHeight="56dp"
            tools:layout_conversion_absoluteWidth="200dp" />

        <TextView
            android:id="@+id/app_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/wine_dine"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/app_logo_iv"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="27dp"
            tools:layout_conversion_absoluteWidth="106dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/info_ib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:backgroundTint="@color/colorPrimary"
                android:contentDescription="@string/info"
                android:elevation="3dp"
                app:backgroundTint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_dialog_info"
                tools:layout_conversion_absoluteHeight="52dp"
                tools:layout_conversion_absoluteWidth="56dp" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/main_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/bottom_nav_bar"
        app:itemTextColor="@color/bottom_nav_bar"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu_items" />


</android.support.constraint.ConstraintLayout>